빌드 파일 깃 이그노어에 추가

--- a/.gitignore
+++ b/.gitignore
@@ -92,7 +92,7 @@ atlassian-ide-plugin.xml
 /.rakeTasks
 
 # aws-sam
-.asw-sam
+.aws-sam/
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
