local 테스트용 폴더 삭제

--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,10 @@ atlassian-ide-plugin.xml
 # aws-sam
 .aws-sam/
 
+# Local
+events/
+tests/
+
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
 crashlytics.properties
