sqlite3, pysqlite3 문제

--- a/.gitignore
+++ b/.gitignore
@@ -97,6 +97,7 @@ atlassian-ide-plugin.xml
 # Local
 events/
 tests/
+layer/
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
